--- a/style/style.css
+++ b/style/style.css
@@ -6,15 +6,13 @@
 
 /* main */
 
-.main_container {
+/* .main_container {
     height: 600px;
-    background-color: blue;
-}
+} */
 
 /* side bar */
 
 .side_bar {
-    height: 100%;
     background-color: red;
 }
 
@@ -27,3 +25,27 @@
     height: 100%;
     background-color: green;
 }
+
+.principal_container .col-sm-12 {
+    border: 1px solid white;
+    height: 300px;
+}
+
+/* statistic section */
+
+/* left main section */
+
+/* prossime classi */
+
+.prossime_classi {
+    background-color: yellow;
+    height: 100px;
+}
+/* faq */
+
+/* right main section */
+
+/* todo */
+
+/* graphics */
+
